testsuite/tests/typecheck/should_fail/T15883d.stderr

T15883d.hs:14:1: error:
    • Can't make a derived instance of
        ‘Show (Foo ('BoxedRep 'Lifted))’ with the stock strategy:
        Don't know how to derive ‘Show’
          for type ‘forall (a :: TYPE rep). a’
    • In the stand-alone deriving instance for
        ‘Show (Foo (BoxedRep Lifted))’
